fixed previously searched cities to only show cities once and added title with spacing

--- a/style.css
+++ b/style.css
@@ -17,3 +17,6 @@ body{
     display: inline-flex;
     margin: 10px;
 }
+#prevCities{
+    margin: 20px 0;
+}
